@@ -51,9 +51,19 @@
             <version>2.0.1</version>
         </dependency>
         <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>1.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -138,6 +148,7 @@
                         <configuration>
                             <mainClass>com.santea.Launcher</mainClass>
                             <options>
+                                <option>--enable-native-access=ALL-UNNAMED</option>
                                 <option>--enable-native-access=javafx.graphics</option>
                                 <option>--sun-misc-unsafe-memory-access=allow</option>
                             </options>
